--- a/DecompileBfres/DecompileBfres.csproj
+++ b/DecompileBfres/DecompileBfres.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="BfresLibrary">
       <HintPath>..\..\..\BotwScripts\BotwScripts.Lib\bin\Release\net6.0\BfresLibrary.dll</HintPath>
     </Reference>
@@ -17,6 +21,9 @@
     </Reference>
     <Reference Include="Syroot.Maths">
       <HintPath>..\..\..\..\..\..\..\Botw\Tools\Model - Textures\Switch-Toolbox\Lib\Syroot.Maths.dll</HintPath>
+    </Reference>
+    <Reference Include="Toolbox.Library">
+      <HintPath>..\..\..\..\..\..\..\Botw\Tools\Model - Textures\Switch-Toolbox\Toolbox.Library.dll</HintPath>
     </Reference>
   </ItemGroup>
 
