--- a/DecompileBfres/Properties/launchSettings.json
+++ b/DecompileBfres/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DecompileBfres": {
       "commandName": "Project",
-      "commandLineArgs": "\"D:\\Botw\\Cemu\\mlc01\\usr\\title\\00050000\\101c9500\\content\\Model\\Animal_Bass.Tex1.sbfres\" \"D:\\Output\""
+      "commandLineArgs": "\"D:\\Botw\\Cemu\\mlc01\\usr\\title\\00050000\\101c9500\\content\\Model\\Animal_Bear.Tex1.sbfres\" \"D:\\Output\""
     }
   }
 }
