--- a/Decompiler.Bfres/Properties/launchSettings.json
+++ b/Decompiler.Bfres/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "DecompileBfres": {
+    "Decompiler.Bfres": {
       "commandName": "Project",
       "commandLineArgs": "\"D:\\Botw\\Cemu\\mlc01\\usr\\title\\00050000\\101c9500\\content\\Model\\Animal_Bear.Tex1.sbfres\" \"D:\\Output\""
     }
