--- a/Decompiler.Bfres/Properties/launchSettings.json
+++ b/Decompiler.Bfres/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "profiles": {
     "Decompiler.Bfres": {
-      "commandName": "Project",
+      "commandName": "Project Commander",
       "commandLineArgs": "\"D:\\Botw\\Cemu\\mlc01\\usr\\title\\00050000\\101c9500\\content\\Model\\Animal_Bear.Tex1.sbfres\" \"D:\\Output\""
     }
   }
